--- a/latex/Linear_Classifiers.tex
+++ b/latex/Linear_Classifiers.tex
@@ -5,7 +5,7 @@ The point of this chapter is to give an introduction to classification through t
 %
 \section{LDA and Fisher's linear discriminant}
 \label{sec:LDA and Fisher's linear discriminant}
-LDA and Fisher's linear discriminant are in principle the same method, but they differ in the whay they are derived. Both will be showed in this section. The arguments are largely based on \cite{bishop} and \cite{modstat}, so no further references to these books will be made. 
+LDA and Fisher's linear discriminant are in principle the same method, but they differ in the way they are derived. Both will be showed in this section. The arguments are largely based on \cite{bishop} and \cite{modstat}, so no further references to these books will be made. 
 
 \subsection{Fisher's linear discriminant}
 \label{sub:Fisher's linear discriminant}
