--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -29,7 +29,8 @@ Another important aspect of a classifier is the time it use to complete its comp
 \\
 
 \colorbox{yellow}{Should do some simulations on difference in dataset size?.}\\
-\colorbox{yellow}{Say something about unordered classes.}
+\colorbox{yellow}{Say something about unordered classes.}\\
+\colorbox{yellow}{Something about how most of the methods can be used for regression as well, but that is not of importance here.}
 
 
 \section{Notation}
